Fix blurr on even no projects.

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -56,7 +56,7 @@ $white-ish: #c4c4c4;
   padding: 0 30px;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
 }
 
 .logo {
@@ -209,14 +209,18 @@ $white-ish: #c4c4c4;
     }
   }
 }
-#prj2 .blur,
-#prj4 .blur {
-  background: linear-gradient(-90deg,#fff0 50%,#c1c1c150 65% 65%,#fbfbfb 95%);
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
+#prj2,
+#prj4 {
+  .blur {
+    background: linear-gradient(-90deg,#fff0 50%,#c1c1c150 65% 65%,#fbfbfb 95%);
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+  }
 }
+
 
 .i { margin-top: 0 !important; }
 
